--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name</title>
+    <title>Amir Fathi</title>
     <style>
         body { font-family: Arial, sans-serif; line-height: 1.6; margin: 20px; }
         header { background: #333; color: #fff; padding: 10px 20px; }
@@ -16,11 +16,11 @@
     </header>
     <section>
         <h2>About Me</h2>
-        <p>Hello! I'm an Android developer and a computer science student at Koç University in Istanbul, Turkey. Welcome to my personal page where I share my projects and interests.</p>
+        <p>Hello! I'm an Android developer and a computer science student at Koç University in Istanbul, Turkey. Welcome to my personal page, where I share my projects and interests.</p>
     </section>
     <section>
         <h2>Contact</h2>
-        <p>Feel free to reach out via <a href="mailto:your-email@example.com">email</a> or follow me on <a href="https://github.com/yourusername" target="_blank">GitHub</a>.</p>
+        <p>Feel free to reach out via <a href="mailto:afathi21@ku.edu.tr">email</a> or follow me on <a href="https://github.com/AmirF194" target="_blank">GitHub</a>.</p>
     </section>
 </body>
 </html>
